fixed container alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,8 +123,6 @@ main {
   width: 100%;
   height: 504px;
   padding: 5px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .container-a-left {
@@ -638,7 +636,11 @@ footer li {
   }
 
   .nav-center {
-    margin-left: 119px;
+    margin-left: 106px;
+  }
+
+  .nav-center ul {
+    padding-left: 13px;
   }
 
   .container-a-right {
